--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u778395528_githa
+DB_USERNAME=u778395528_githa
+DB_PASSWORD=Bp]3=S#s&8
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
