--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:LNoNiMrjSUt3sqPdRTiN5Q6XIpojGPkGfC3fXBImdpg=
 APP_DEBUG=true
 APP_URL=http://localhost
 APP_PROJECT_VERSION=10
